# db-opt

./: .gitignore  README.md  Readme.txt  electron-builder.json  examples.config.json  installer.nsh  main.py  package-lock.json  package.json  requirements.txt  tsconfig.json
assets/: .gitkeep
bindings/: CMakeLists.txt  setup.py  zoom_sdk_bindings.cp310-win_amd64.pyd
bindings/src/: auth_service_binding.cpp  callbacks.cpp  callbacks.h  configuration_binding.cpp  meeting_service_binding.cpp  module.cpp  participants_binding.cpp  sdk_common.h  sharing_binding.cpp  zoom_sdk_binding.cpp
scripts/: check-sdk.js  click-detector.js  postbuild.js  prebuild.js  setup-sdk.js
sdk/zoom-sdk-electron-6.7.2.72402/lib/: electron_sdk_pb.js  settings.js  zoom_annotation_ctrl.js  zoom_auth.js  zoom_customized_resource.js  zoom_direct_share_helper.js  zoom_h323.js  zoom_meeting.js  zoom_meeting_aan.js  zoom_meeting_ai_companion.js  zoom_meeting_audio.js  zoom_meeting_chat.js  zoom_meeting_close_caption.js  zoom_meeting_configuration.js  zoom_meeting_docs.js  zoom_meeting_indicatory.js  zoom_meeting_info.js  zoom_meeting_live_stream_ctrl.js  zoom_meeting_participants_ctrl.js  zoom_meeting_polling.js  zoom_meeting_qa.js  zoom_meeting_raw_archiving_ctrl.js  zoom_meeting_reaction.js  zoom_meeting_recording.js  zoom_meeting_reminder.js  zoom_meeting_request_raw_live_stream_privilege_handler.js  zoom_meeting_share.js  zoom_meeting_ui_ctrl.js  zoom_meeting_video.js  zoom_meeting_waiting_room.js  zoom_meeting_webinar.js  zoom_meeting_whiteboard.js  zoom_rawdata.js  zoom_sdk.js  zoom_setting.js  zoom_setting_accessibility_ctrl.js  zoom_setting_audio.js  zoom_setting_general.js  zoom_setting_recording.js  (+8 more)
src/: __init__.py  __main__.py  action_player.py  action_recorder.py  config.py  main.py  recovery.py  windows_message_loop.py  zoom_service.py
src/main/: action-player.ts  action-recorder.ts  config.ts  index.ts  preload.ts  recording-dialog.ts  recovery.ts  startup.ts  zoom-service.ts
src/renderer/: index.html  recording-dialog.html  renderer.js  renderer.ts
(+2 files in other folders)
